--- a/MinecraftPurpleTheme.css
+++ b/MinecraftPurpleTheme.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url("https://angelillo15.es/resources/img/background.png");
+  background-image: url("https://github.com/Joshet18/pterotheme/blob/main/background_solid_purple-644071.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
@@ -8,17 +8,17 @@ html {
 }
 
 a.GreyRowBox-sc-1xo9c6v-0.ServerRow__StatusIndicatorBox-sc-1ibsw91-2.dyLna-D.fRwFrz.DashboardContainer___StyledServerRow-sc-1topkxf-2 {
-  background-color: #291b32;
+  background-color: #67487a;
 }
 
 a.GreyRowBox-sc-1xo9c6v-0.ServerRow__StatusIndicatorBox-sc-1ibsw91-2.dyLna-D.fwbDSe.DashboardContainer___StyledServerRow-sc-1topkxf-2.jbVWLN {
-  background-color: #291b32;
+  background-color: #452d55;
   background-size: cover;
 
 }
 
 div.SubNavigation-sc-lfuaoi-0.jZPsWO.fade-appear-done.fade-enter-done {
-  background-color: #291b32;
+  background-color: #47295a;
 }
 
 div.grid.grid-cols-6.gap-2.md:gap-4.col-span-4.lg:col-span-1.order-last.lg:order-none {
