--- a/MinecraftPurpleTheme.css
+++ b/MinecraftPurpleTheme.css
@@ -150,7 +150,7 @@ div.TitledGreyBox___StyledDiv-sc-gvsoy-0.oLbNP.StartupContainer___StyledTitledGr
 }
 
 div.App___StyledDiv-sc-2l91w7-0.fnfeQw {
-  background-image: url("https://angelillo15.es/resources/img/background.png");
+  background-image: url("https://github.com/Joshet18/pterotheme/blob/main/background_solid_purple-644071.jpg");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
