--- a/MinecraftPurpleTheme.css
+++ b/MinecraftPurpleTheme.css
@@ -1,6 +1,10 @@
 html {
+  background-image: url("https://raw.githubusercontent.com/Joshet18/pterotheme/main/background_solid_purple-644071.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
   background-size: cover;
-  background-color: #281a31;
+  background-color: transparent;
 }
 
 a.GreyRowBox-sc-1xo9c6v-0.ServerRow__StatusIndicatorBox-sc-1ibsw91-2.dyLna-D.fRwFrz.DashboardContainer___StyledServerRow-sc-1topkxf-2 {
@@ -62,7 +66,7 @@ a.style-module_35MPv1CD.style-module_35MPv1CD.active {
   background-color: #101122 !important;
 }
 div.GreyRowBox-sc-1xo9c6v-0.iTERJN.flex-wrap.md:flex-nowrap.mt-2 {
-  background-color: #27283f
+  background-color: #35273f
 }
 
 div.TitledGreyBox___StyledDiv3-sc-gvsoy-4.fKIIIQ {
@@ -70,75 +74,75 @@ div.TitledGreyBox___StyledDiv3-sc-gvsoy-4.fKIIIQ {
 }
 
 input.Input-sc-19rce1w-0.jqTCDz.cursor-pointer {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 input.Input-sc-19rce1w-0.jqTCDz {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.grid.grid-cols-10.py-4.border-b-2.border-gray-800.last:rounded-b.last:border-0.group {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.TitledGreyBox___StyledDiv2-sc-gvsoy-1.jRrWLs {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.SubNavigation-sc-lfuaoi-0.jZPsWO {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.ContentBox___StyledDiv-sc-mjlt6f-2.iGOcRf {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.Modal___StyledDiv2-sc-9vzni8-3.ekHIsr {
-  background-color: #27283f
+  background-color: #35273f
 }
 
 input.peer.style-module_3TDo--Tn {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 button.style-module_4LBM1DKx.style-module_3kBDV_wo.style-module_Yp7-2Fw-.flex-1 {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.GreyRowBox-sc-1xo9c6v-0.DatabaseRow___StyledGreyRowBox-sc-1t67zwr-13.iTERJN.gkSIus {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.EditScheduleModal___StyledDiv2-sc-wh9db9-4.fhEpAC {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.EditScheduleModal___StyledDiv4-sc-wh9db9-6.jyDDEO {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.EditScheduleModal___StyledDiv5-sc-wh9db9-7.ueIjC {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 a.GreyRowBox-sc-1xo9c6v-0.ScheduleContainer___StyledGreyRowBox-sc-dlqnx9-2.dyLna-D.bppajE {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.GreyRowBox-sc-1xo9c6v-0.UserRow___StyledGreyRowBox-sc-hg2wjz-0.dyLna-D.dmlaEn {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 div.CreateBackupButton___StyledDiv2-sc-da8bqw-3.eDncUf {
-  background-color: #27283f;
+  background-color: #35273f;
 }
 
 textarea.Input__Textarea-sc-19rce1w-1.kKFWRA {
-  background-color: #333447;
+  background-color: #3c3347;
 }
 
 div.flex.justify-end.space-x-4.mt-4.w-full.md:mt-0.md:w-48 {
-  background-color: #27283f;
+  background-color: #33273f;
 }
 
 select.Select-sc-17exaqp-0.dupyoa {
@@ -146,7 +150,7 @@ select.Select-sc-17exaqp-0.dupyoa {
 }
 
 div.TitledGreyBox___StyledDiv-sc-gvsoy-0.oLbNP.StartupContainer___StyledTitledGreyBox-sc-163imy2-1.kRunTE {
-  background-color: #242538;
+  background-color: #312438;
 }
 
 div.App___StyledDiv-sc-2l91w7-0.fnfeQw {
@@ -163,29 +167,29 @@ a.GreyRowBox-sc-1xo9c6v-0.ServerRow__StatusIndicatorBox-sc-1ibsw91-2.dyLna-D {
 }
 
 label.PermissionRow__Container-sc-1h899cn-0.icxFlO:hover {
-  background-color: #101122;
+  background-color: #1b1022;
 }
 
 div.style-module_1DtraXMW.bg-gray-700 {
-  background-color: #2a284d;
+  background-color: #3e284d;
 }
 
 input.Input-sc-19rce1w-0.jqTCDz {
-  background-color: #191832;
+  background-color: #2b1832;
 }
 
 div.TitledGreyBox___StyledDiv-sc-gvsoy-0.oLbNP {
-  background-color: #242538;
+  background-color: #312438;
 }
 
 div.grid.grid-cols-10.py-4.border-b-2.border-gray-800.last:rounded-b.last:border-0.group {
-  background-color: #242538;
+  background-color: #312438;
 }
 
 .group {
-  background-color: #242538;
+  background-color: #312438;
 }
 
 .GreyRowBox-sc-1xo9c6v-0 {
-  background-color: #242538;
+  background-color: #2e2438;
 }
