--- a/MinecraftPurpleTheme.css
+++ b/MinecraftPurpleTheme.css
@@ -8,37 +8,37 @@ html {
 }
 
 a.GreyRowBox-sc-1xo9c6v-0.ServerRow__StatusIndicatorBox-sc-1ibsw91-2.dyLna-D.fRwFrz.DashboardContainer___StyledServerRow-sc-1topkxf-2 {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 a.GreyRowBox-sc-1xo9c6v-0.ServerRow__StatusIndicatorBox-sc-1ibsw91-2.dyLna-D.fwbDSe.DashboardContainer___StyledServerRow-sc-1topkxf-2.jbVWLN {
-  background-color: #3c2849;
+  background-color: #341f42;
   background-size: cover;
 
 }
 
 div.SubNavigation-sc-lfuaoi-0.jZPsWO.fade-appear-done.fade-enter-done {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 div.grid.grid-cols-6.gap-2.md:gap-4.col-span-4.lg:col-span-1.order-last.lg:order-none {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 div.style-module_2Vp6MaXq.bg-gray-600.cursor-pointer {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 div.style-module_2Vp6MaXq.bg-gray-600 {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 div.style-module_2XbmHEcn.group {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 div.w-full.bg-neutral-900.shadow-md.overflow-x-auto {
-  background-color: #3c2849
+  background-color: #341f42
 }
 
 div.icon.mr-4 {
@@ -46,12 +46,12 @@ div.icon.mr-4 {
 }
 
 a.style-module_35MPv1CD.style-module_35MPv1CD.active {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 
 .style-module_1WqkLT9X {
-  background-color: #3c2849 !important;
+  background-color: #341f42 !important;
 }
 
 .style-module_1WqkLT9X:hover {
@@ -59,7 +59,7 @@ a.style-module_35MPv1CD.style-module_35MPv1CD.active {
 }
 
 .style-module_35MPv1CD.active {
-  background-color: #3c2849 !important;
+  background-color: #341f42 !important;
 }
 
 .style-module_35MPv1CD.active:hover {
@@ -70,7 +70,7 @@ div.GreyRowBox-sc-1xo9c6v-0.iTERJN.flex-wrap.md:flex-nowrap.mt-2 {
 }
 
 div.TitledGreyBox___StyledDiv3-sc-gvsoy-4.fKIIIQ {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 input.Input-sc-19rce1w-0.jqTCDz.cursor-pointer {
@@ -146,7 +146,7 @@ div.flex.justify-end.space-x-4.mt-4.w-full.md:mt-0.md:w-48 {
 }
 
 select.Select-sc-17exaqp-0.dupyoa {
-  background-color: #3c2849;
+  background-color: #341f42;
 }
 
 div.TitledGreyBox___StyledDiv-sc-gvsoy-0.oLbNP.StartupContainer___StyledTitledGreyBox-sc-163imy2-1.kRunTE {
@@ -163,7 +163,7 @@ div.App___StyledDiv-sc-2l91w7-0.fnfeQw {
 }
 
 a.GreyRowBox-sc-1xo9c6v-0.ServerRow__StatusIndicatorBox-sc-1ibsw91-2.dyLna-D {
-  background-color: #3c2849
+  background-color: #341f42
 }
 
 label.PermissionRow__Container-sc-1h899cn-0.icxFlO:hover {
